update to accepted version

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -39,35 +39,22 @@ archivePrefix = {arXiv},
        adsurl = {https://ui.adsabs.harvard.edu/abs/2020A&A...633A..69H},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
-@ARTICLE{2020SciPy-NMeth,
-       author = {{Virtanen}, Pauli and {Gommers}, Ralf and {Oliphant},
-         Travis E. and {Haberland}, Matt and {Reddy}, Tyler and
-         {Cournapeau}, David and {Burovski}, Evgeni and {Peterson}, Pearu
-         and {Weckesser}, Warren and {Bright}, Jonathan and {van der Walt},
-         St{\'e}fan J.  and {Brett}, Matthew and {Wilson}, Joshua and
-         {Jarrod Millman}, K.  and {Mayorov}, Nikolay and {Nelson}, Andrew
-         R.~J. and {Jones}, Eric and {Kern}, Robert and {Larson}, Eric and
-         {Carey}, CJ and {Polat}, {\.I}lhan and {Feng}, Yu and {Moore},
-         Eric W. and {Vand erPlas}, Jake and {Laxalde}, Denis and
-         {Perktold}, Josef and {Cimrman}, Robert and {Henriksen}, Ian and
-         {Quintero}, E.~A. and {Harris}, Charles R and {Archibald}, Anne M.
-         and {Ribeiro}, Ant{\^o}nio H. and {Pedregosa}, Fabian and
-         {van Mulbregt}, Paul and {Contributors}, SciPy 1. 0},
-        title = "{SciPy 1.0: Fundamental Algorithms for Scientific
-                  Computing in Python}",
-      journal = {Nature Methods},
-         year = "2020",
-       adsurl = {https://rdcu.be/b08Wh},
-       doi = {https://doi.org/10.1038/s41592-019-0686-2},
-}
-@article{Brinckmann:2018cvx,
-      author         = "Brinckmann, Thejs and Lesgourgues, Julien",
-      title          = "{MontePython 3: boosted MCMC sampler and other features}",
-      year           = "2018",
-      eprint         = "1804.07261",
-      archivePrefix  = "arXiv",
-      primaryClass   = "astro-ph.CO",
-      SLACcitation   = "%%CITATION = ARXIV:1804.07261;%%"
+@ARTICLE{Brinckmann:2018cvx,
+       author = {{Brinckmann}, Thejs and {Lesgourgues}, Julien},
+        title = "{MontePython 3: Boosted MCMC sampler and other features}",
+      journal = {Physics of the Dark Universe},
+     keywords = {Cosmology, Parameter inference, Numerical tools, Astrophysics - Cosmology and Nongalactic Astrophysics, Astrophysics - Instrumentation and Methods for Astrophysics},
+         year = 2019,
+        month = mar,
+       volume = {24},
+          eid = {100260},
+        pages = {100260},
+          doi = {10.1016/j.dark.2018.100260},
+archivePrefix = {arXiv},
+       eprint = {1804.07261},
+ primaryClass = {astro-ph.CO},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2019PDU....24..260B},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 @article{Audren:2012wb,
       author         = "Audren, Benjamin and Lesgourgues, Julien and Benabed,
@@ -265,7 +252,7 @@ archivePrefix = {arXiv},
        volume = {604},
           eid = {A134},
         pages = {A134},
-          doi = {10.1051/0004-6361/201730747}
+          doi = {10.1051/0004-6361/201730747},
 archivePrefix = {arXiv},
        eprint = {1703.02991},
  primaryClass = {astro-ph.GA},
@@ -294,6 +281,7 @@ archivePrefix = {arXiv},
  primaryClass = {astro-ph.GA},
        adsurl = {https://ui.adsabs.harvard.edu/abs/2019A&A...625A...2K},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
 @ARTICLE{2013Msngr.154...32E,
        author = {{Edge}, A. and {Sutherland}, W. and {Kuijken}, K. and {Driver}, S. and
          {McMahon}, R. and {Eales}, S. and {Emerson}, J.~P.},
@@ -762,47 +750,17 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 @ARTICLE{DES5,
-       author = {{Gatti}, M. and {Sheldon}, E. and {Amon}, A. and {Becker}, M. and
-         {Troxel}, M. and {Choi}, A. and {Doux}, C. and {MacCrann}, N. and
-         {Navarro Alsina}, A. and {Harrison}, I. and {Gruen}, D. and
-         {Bernstein}, G. and {Jarvis}, M. and {Secco}, L.~F. and
-         {Fert{\'e}}, A. and {Shin}, T. and {McCullough}, J. and
-         {Rollins}, R.~P. and {Chen}, R. and {Chang}, C. and {Pandey}, S. and
-         {Tutusaus}, I. and {Prat}, J. and {Elvin-Poole}, J. and {Sanchez}, C. and
-         {Plazas}, A.~A. and {Roodman}, A. and {Zuntz}, J. and
-         {Abbott}, T.~M.~C. and {Aguena}, M. and {Allam}, S. and {Annis}, J. and
-         {Avila}, S. and {Bacon}, D. and {Bertin}, E. and {Bhargava}, S. and
-         {Brooks}, D. and {Burke}, D.~L. and {Carnero Rosell}, A. and
-         {Carrasco Kind}, M. and {Carretero}, J. and {Castander}, F.~J. and
-         {Conselice}, C. and {Costanzi}, M. and {da Costa}, L.~N. and
-         {Davis}, T.~M. and {De Vicente}, J. and {Desai}, S. and {Diehl}, H.~T. and
-         {Dietrich}, J.~P. and {Doel}, P. and {Drlica-Wagner}, A. and
-         {Eckert}, K. and {Everett}, S. and {Ferrero}, I. and {Frieman}, J. and
-         {Garc{\'\i}a-Bellido}, J. and {Gerdes}, D.~W. and {Giannantonio}, T. and
-         {Gruendl}, R.~A. and {Gschwend}, J. and {Gutierrez}, G. and
-         {Hartley}, W.~G. and {Hinton}, S.~R. and {Hollowood}, D.~L. and
-         {Honscheid}, K. and {Hoyle}, B. and {Huff}, E.~M. and {Huterer}, D. and
-         {Jain}, B. and {James}, D.~J. and {Jeltema}, T. and {Krause}, E. and
-         {Kron}, R. and {Kuropatkin}, N. and {Lima}, M. and {Maia}, M.~A.~G. and
-         {Marshall}, J.~L. and {Miquel}, R. and {Morgan}, R. and {Myles}, J. and
-         {Palmese}, A. and {Paz-Chinch{\'o}n}, F. and {Rykoff}, E.~S. and
-         {Samuroff}, S. and {Sanchez}, E. and {Scarpine}, V. and
-         {Schubnell}, M. and {Serrano}, S. and {Sevilla-Noarbe}, I. and
-         {Smith}, M. and {Suchyta}, E. and {Swanson}, M.~E.~C. and {Tarle}, G. and
-         {Thomas}, D. and {To}, C. and {Tucker}, D.~L. and {Varga}, T.~N. and
-         {Wechsler}, R.~H. and {Weller}, J. and {Wester}, W. and
-         {Wilkinson}, R.~D.},
+       author = {{Gatti}, M. and {Sheldon}, E. and {Amon}, A. and {Becker}, M. and {Troxel}, M. and {Choi}, A. and {Doux}, C. and {MacCrann}, N. and {Navarro-Alsina}, A. and {Harrison}, I. and {Gruen}, D. and {Bernstein}, G. and {Jarvis}, M. and {Secco}, L.~F. and {Fert{\'e}}, A. and {Shin}, T. and {McCullough}, J. and {Rollins}, R.~P. and {Chen}, R. and {Chang}, C. and {Pandey}, S. and {Tutusaus}, I. and {Prat}, J. and {Elvin-Poole}, J. and {Sanchez}, C. and {Plazas}, A.~A. and {Roodman}, A. and {Zuntz}, J. and {Abbott}, T.~M.~C. and {Aguena}, M. and {Allam}, S. and {Annis}, J. and {Avila}, S. and {Bacon}, D. and {Bertin}, E. and {Bhargava}, S. and {Brooks}, D. and {Burke}, D.~L. and {Carnero Rosell}, A. and {Carrasco Kind}, M. and {Carretero}, J. and {Castander}, F.~J. and {Conselice}, C. and {Costanzi}, M. and {Crocce}, M. and {da Costa}, L.~N. and {Davis}, T.~M. and {De Vicente}, J. and {Desai}, S. and {Diehl}, H.~T. and {Dietrich}, J.~P. and {Doel}, P. and {Drlica-Wagner}, A. and {Eckert}, K. and {Everett}, S. and {Ferrero}, I. and {Frieman}, J. and {Garc{\'\i}a-Bellido}, J. and {Gerdes}, D.~W. and {Giannantonio}, T. and {Gruendl}, R.~A. and {Gschwend}, J. and {Gutierrez}, G. and {Hartley}, W.~G. and {Hinton}, S.~R. and {Hollowood}, D.~L. and {Honscheid}, K. and {Hoyle}, B. and {Huff}, E.~M. and {Huterer}, D. and {Jain}, B. and {James}, D.~J. and {Jeltema}, T. and {Krause}, E. and {Kron}, R. and {Kuropatkin}, N. and {Lima}, M. and {Maia}, M.~A.~G. and {Marshall}, J.~L. and {Miquel}, R. and {Morgan}, R. and {Myles}, J. and {Palmese}, A. and {Paz-Chinch{\'o}n}, F. and {Rykoff}, E.~S. and {Samuroff}, S. and {Sanchez}, E. and {Scarpine}, V. and {Schubnell}, M. and {Serrano}, S. and {Sevilla-Noarbe}, I. and {Smith}, M. and {Soares-Santos}, M. and {Suchyta}, E. and {Swanson}, M.~E.~C. and {Tarle}, G. and {Thomas}, D. and {To}, C. and {Tucker}, D.~L. and {Varga}, T.~N. and {Wechsler}, R.~H. and {Weller}, J. and {Wester}, W. and {Wilkinson}, R.~D.},
         title = "{Dark Energy Survey Year 3 Results: Weak Lensing Shape Catalogue}",
-      journal = {arXiv e-prints},
-     keywords = {Astrophysics - Cosmology and Nongalactic Astrophysics},
-         year = 2020,
-        month = nov,
-          eid = {arXiv:2011.03408},
-        pages = {arXiv:2011.03408},
+      journal = {\mnras},
+     keywords = {gravitational lensing: weak, methods: data analysis, techniques: image processing, catalogues, surveys, cosmology: observations, Astrophysics - Cosmology and Nongalactic Astrophysics},
+         year = 2021,
+        month = apr,
+          doi = {10.1093/mnras/stab918},
 archivePrefix = {arXiv},
        eprint = {2011.03408},
  primaryClass = {astro-ph.CO},
-       adsurl = {https://ui.adsabs.harvard.edu/abs/2020arXiv201103408G},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2021MNRAS.tmp..930G},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 @ARTICLE{2019NatAs...3..212S,
@@ -1011,20 +969,20 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 @ARTICLE{fortuna20,
-       author = {{Fortuna}, Maria Cristina and {Hoekstra}, Henk and {Joachimi}, Benjamin and
-         {Johnston}, Harry and {Chisari}, Nora Elisa and {Georgiou}, Christos and
-         {Mahony}, Constance},
+       author = {{Fortuna}, Maria Cristina and {Hoekstra}, Henk and {Joachimi}, Benjamin and {Johnston}, Harry and {Chisari}, Nora Elisa and {Georgiou}, Christos and {Mahony}, Constance},
         title = "{The halo model as a versatile tool to predict intrinsic alignments}",
-      journal = {arXiv e-prints},
-     keywords = {Astrophysics - Cosmology and Nongalactic Astrophysics, Astrophysics - Astrophysics of Galaxies},
-         year = 2020,
-        month = mar,
-          eid = {arXiv:2003.02700},
-        pages = {arXiv:2003.02700},
+      journal = {\mnras},
+     keywords = {gravitational lensing: weak, galaxies: haloes, galaxies: statistics, cosmology: theory, Astrophysics - Cosmology and Nongalactic Astrophysics, Astrophysics - Astrophysics of Galaxies},
+         year = 2021,
+        month = feb,
+       volume = {501},
+       number = {2},
+        pages = {2983-3002},
+          doi = {10.1093/mnras/staa3802},
 archivePrefix = {arXiv},
        eprint = {2003.02700},
  primaryClass = {astro-ph.CO},
-       adsurl = {https://ui.adsabs.harvard.edu/abs/2020arXiv200302700F},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2021MNRAS.501.2983F},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 @ARTICLE{kaiser92,
@@ -1099,19 +1057,21 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 @ARTICLE{Hadzhiyska20,
-       author = {{Hadzhiyska}, Boryana and {Alonso}, David and {Nicola}, Andrina and
-         {Slosar}, An{\v{z}}e},
-        title = "{Analytic marginalization of $N(z)$ uncertainties in tomographic galaxy surveys}",
-      journal = {arXiv e-prints},
+       author = {{Hadzhiyska}, Boryana and {Alonso}, David and {Nicola}, Andrina and {Slosar}, An{\v{z}}e},
+        title = "{Analytic marginalization of N(z) uncertainties in tomographic galaxy surveys}",
+      journal = {\jcap},
      keywords = {Astrophysics - Cosmology and Nongalactic Astrophysics},
          year = 2020,
-        month = jul,
-          eid = {arXiv:2007.14989},
-        pages = {arXiv:2007.14989},
+        month = oct,
+       volume = {2020},
+       number = {10},
+          eid = {056},
+        pages = {056},
+          doi = {10.1088/1475-7516/2020/10/056},
 archivePrefix = {arXiv},
        eprint = {2007.14989},
  primaryClass = {astro-ph.CO},
-       adsurl = {https://ui.adsabs.harvard.edu/abs/2020arXiv200714989H},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2020JCAP...10..056H},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 @ARTICLE{Mice1,
@@ -1169,26 +1129,20 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 @ARTICLE{asgari20,
-       author = {{Asgari}, Marika and {Lin}, Chieh-An and {Joachimi}, Benjamin and
-         {Giblin}, Benjamin and {Heymans}, Catherine and {Hildebrandt}, Hendrik and
-         {Kannawadi}, Arun and {St{\"o}lzner}, Benjamin and
-         {Tr{\"o}ster}, Tilman and {van den Busch}, Jan Luca and
-         {Wright}, Angus H. and {Bilicki}, Maciej and {Blake}, Chris and
-         {de Jong}, Jelte and {Dvornik}, Andrej and {Erben}, Thomas and
-         {Getman}, Fedor and {Hoekstra}, Henk and {K{\"o}hlinger}, Fabian and
-         {Kuijken}, Konrad and {Miller}, Lance and {Radovich}, Mario and
-         {Schneider}, Peter and {Shan}, HuanYuan and {Valentijn}, Edwin},
-        title = "{KiDS-1000 Cosmology: Cosmic shear constraints and comparison between two point statistics}",
-      journal = {arXiv e-prints},
-     keywords = {Astrophysics - Cosmology and Nongalactic Astrophysics},
-         year = 2020,
-        month = jul,
-          eid = {arXiv:2007.15633},
-        pages = {arXiv:2007.15633},
+       author = {{Asgari}, Marika and {Lin}, Chieh-An and {Joachimi}, Benjamin and {Giblin}, Benjamin and {Heymans}, Catherine and {Hildebrandt}, Hendrik and {Kannawadi}, Arun and {St{\"o}lzner}, Benjamin and {Tr{\"o}ster}, Tilman and {van den Busch}, Jan Luca and {Wright}, Angus H. and {Bilicki}, Maciej and {Blake}, Chris and {de Jong}, Jelte and {Dvornik}, Andrej and {Erben}, Thomas and {Getman}, Fedor and {Hoekstra}, Henk and {K{\"o}hlinger}, Fabian and {Kuijken}, Konrad and {Miller}, Lance and {Radovich}, Mario and {Schneider}, Peter and {Shan}, HuanYuan and {Valentijn}, Edwin},
+        title = "{KiDS-1000 cosmology: Cosmic shear constraints and comparison between two point statistics}",
+      journal = {\aap},
+     keywords = {gravitational lensing: weak, methods: observational, cosmology: observations, large-scale structure of Universe, cosmological parameters, Astrophysics - Cosmology and Nongalactic Astrophysics},
+         year = 2021,
+        month = jan,
+       volume = {645},
+          eid = {A104},
+        pages = {A104},
+          doi = {10.1051/0004-6361/202039070},
 archivePrefix = {arXiv},
        eprint = {2007.15633},
  primaryClass = {astro-ph.CO},
-       adsurl = {https://ui.adsabs.harvard.edu/abs/2020arXiv200715633A},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2021A&A...645A.104A},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 @ARTICLE{alarcon,
@@ -1227,45 +1181,37 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 @ARTICLE{hildebrandt20,
-       author = {{Hildebrandt}, H. and {van den Busch}, J.~L. and {Wright}, A.~H. and
-         {Blake}, C. and {Joachimi}, B. and {Kuijken}, K. and {Tr{\"o}ster}, T. and
-         {Asgari}, M. and {Bilicki}, M. and {de Jong}, J.~T.~A. and
-         {Dvornik}, A. and {Erben}, T. and {Getman}, F. and {Giblin}, B. and
-         {Heymans}, C. and {Kannawadi}, A. and {Lin}, C. -A. and {Shan}, H. -Y.},
+       author = {{Hildebrandt}, H. and {van den Busch}, J.~L. and {Wright}, A.~H. and {Blake}, C. and {Joachimi}, B. and {Kuijken}, K. and {Tr{\"o}ster}, T. and {Asgari}, M. and {Bilicki}, M. and {de Jong}, J.~T.~A. and {Dvornik}, A. and {Erben}, T. and {Getman}, F. and {Giblin}, B. and {Heymans}, C. and {Kannawadi}, A. and {Lin}, C. -A. and {Shan}, H. -Y.},
         title = "{KiDS-1000 catalogue: Redshift distributions and their calibration}",
-      journal = {arXiv e-prints},
-     keywords = {Astrophysics - Cosmology and Nongalactic Astrophysics, Astrophysics - Instrumentation and Methods for Astrophysics},
-         year = 2020,
-        month = jul,
-          eid = {arXiv:2007.15635},
-        pages = {arXiv:2007.15635},
+      journal = {\aap},
+     keywords = {cosmology: observations, gravitational lensing: weak, galaxies: photometry, surveys, Astrophysics - Cosmology and Nongalactic Astrophysics, Astrophysics - Instrumentation and Methods for Astrophysics},
+         year = 2021,
+        month = mar,
+       volume = {647},
+          eid = {A124},
+        pages = {A124},
+          doi = {10.1051/0004-6361/202039018},
 archivePrefix = {arXiv},
        eprint = {2007.15635},
  primaryClass = {astro-ph.CO},
-       adsurl = {https://ui.adsabs.harvard.edu/abs/2020arXiv200715635H},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2021A&A...647A.124H},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 @ARTICLE{joachimi20,
-       author = {{Joachimi}, B. and {Lin}, C. -A. and {Asgari}, M. and {Tr{\"o}ster}, T. and
-         {Heymans}, C. and {Hildebrandt}, H. and {K{\"o}hlinger}, F. and
-         {S{\'a}nchez}, A.~G. and {Wright}, A.~H. and {Bilicki}, M. and
-         {Blake}, C. and {van den Busch}, J.~L. and {Crocce}, M. and
-         {Dvornik}, A. and {Erben}, T. and {Getman}, F. and {Giblin}, B. and
-         {Hoekstra}, H. and {Kannawadi}, A. and {Kuijken}, K. and
-         {Napolitano}, N.~R. and {Schneider}, P. and {Scoccimarro}, R. and
-         {Sellentin}, E. and {Shan}, H.~Y. and {von Wietersheim-Kramsta}, M. and
-         {Zuntz}, J.},
-        title = "{KiDS-1000 Methodology: Modelling and inference for joint weak gravitational lensing and spectroscopic galaxy clustering analysis}",
-      journal = {arXiv e-prints},
-     keywords = {Astrophysics - Cosmology and Nongalactic Astrophysics, Astrophysics - Instrumentation and Methods for Astrophysics},
-         year = 2020,
-        month = jul,
-          eid = {arXiv:2007.01844},
-        pages = {arXiv:2007.01844},
+       author = {{Joachimi}, B. and {Lin}, C. -A. and {Asgari}, M. and {Tr{\"o}ster}, T. and {Heymans}, C. and {Hildebrandt}, H. and {K{\"o}hlinger}, F. and {S{\'a}nchez}, A.~G. and {Wright}, A.~H. and {Bilicki}, M. and {Blake}, C. and {van den Busch}, J.~L. and {Crocce}, M. and {Dvornik}, A. and {Erben}, T. and {Getman}, F. and {Giblin}, B. and {Hoekstra}, H. and {Kannawadi}, A. and {Kuijken}, K. and {Napolitano}, N.~R. and {Schneider}, P. and {Scoccimarro}, R. and {Sellentin}, E. and {Shan}, H.~Y. and {von Wietersheim-Kramsta}, M. and {Zuntz}, J.},
+        title = "{KiDS-1000 methodology: Modelling and inference for joint weak gravitational lensing and spectroscopic galaxy clustering analysis}",
+      journal = {\aap},
+     keywords = {cosmology: miscellaneous, gravitational lensing: weak, large-scale structure of Universe, methods: data analysis, methods: analytical, methods: statistical, Astrophysics - Cosmology and Nongalactic Astrophysics, Astrophysics - Instrumentation and Methods for Astrophysics},
+         year = 2021,
+        month = feb,
+       volume = {646},
+          eid = {A129},
+        pages = {A129},
+          doi = {10.1051/0004-6361/202038831},
 archivePrefix = {arXiv},
        eprint = {2007.01844},
  primaryClass = {astro-ph.CO},
-       adsurl = {https://ui.adsabs.harvard.edu/abs/2020arXiv200701844J},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2021A&A...646A.129J},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 @ARTICLE{amara,
@@ -1502,6 +1448,195 @@ archivePrefix = {arXiv},
        adsurl = {https://ui.adsabs.harvard.edu/abs/2015ApJ...813...53M},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
+
+@ARTICLE{CFHTLens,
+       author = {{Benjamin}, Jonathan and {Van Waerbeke}, Ludovic and {Heymans}, Catherine and {Kilbinger}, Martin and {Erben}, Thomas and {Hildebrandt}, Hendrik and {Hoekstra}, Henk and {Kitching}, Thomas D. and {Mellier}, Yannick and {Miller}, Lance and {Rowe}, Barnaby and {Schrabback}, Tim and {Simpson}, Fergus and {Coupon}, Jean and {Fu}, Liping and {Harnois-D{\'e}raps}, Joachim and {Hudson}, Michael J. and {Kuijken}, Konrad and {Semboloni}, Elisabetta and {Vafaei}, Sanaz and {Velander}, Malin},
+        title = "{CFHTLenS tomographic weak lensing: quantifying accurate redshift distributions}",
+      journal = {\mnras},
+     keywords = {techniques: photometric, galaxies: distances and redshifts, galaxies: photometry, cosmological parameters -- cosmology: observations, large-scale structure of Universe, Astrophysics - Cosmology and Nongalactic Astrophysics},
+         year = 2013,
+        month = may,
+       volume = {431},
+       number = {2},
+        pages = {1547-1564},
+          doi = {10.1093/mnras/stt276},
+archivePrefix = {arXiv},
+       eprint = {1212.3327},
+ primaryClass = {astro-ph.CO},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2013MNRAS.431.1547B},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{hoyle19,
+       author = {{Hoyle}, Ben and {Rau}, Markus Michael},
+        title = "{Self-consistent redshift estimation using correlation functions without a spectroscopic reference sample}",
+      journal = {\mnras},
+     keywords = {catalogues, surveys, galaxies: distances and redshifts, Astrophysics - Cosmology and Nongalactic Astrophysics, Astrophysics - Astrophysics of Galaxies},
+         year = 2019,
+        month = may,
+       volume = {485},
+       number = {3},
+        pages = {3642-3660},
+          doi = {10.1093/mnras/stz502},
+archivePrefix = {arXiv},
+       eprint = {1802.02581},
+ primaryClass = {astro-ph.CO},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2019MNRAS.485.3642H},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{mcleod17,
+       author = {{McLeod}, Michael and {Balan}, Sreekumar T. and {Abdalla}, Filipe B.},
+        title = "{A joint analysis for cosmology and photometric redshift calibration using cross-correlations}",
+      journal = {\mnras},
+     keywords = {surveys, galaxies: photometry, cosmological parameters, large-scale structure of Universe, Astrophysics - Cosmology and Nongalactic Astrophysics},
+         year = 2017,
+        month = apr,
+       volume = {466},
+       number = {3},
+        pages = {3558-3568},
+          doi = {10.1093/mnras/stw2989},
+archivePrefix = {arXiv},
+       eprint = {1612.00307},
+ primaryClass = {astro-ph.CO},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2017MNRAS.466.3558M},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{leistedt19,
+       author = {{Leistedt}, Boris and {Hogg}, David W. and {Wechsler}, Risa H. and {DeRose}, Joe},
+        title = "{Hierarchical Modeling and Statistical Calibration for Photometric Redshifts}",
+      journal = {\apj},
+     keywords = {galaxies: distances and redshifts, galaxies: photometry, galaxies: statistics, large-scale structure of universe, Astrophysics - Cosmology and Nongalactic Astrophysics},
+         year = 2019,
+        month = aug,
+       volume = {881},
+       number = {1},
+          eid = {80},
+        pages = {80},
+          doi = {10.3847/1538-4357/ab2d29},
+archivePrefix = {arXiv},
+       eprint = {1807.01391},
+ primaryClass = {astro-ph.CO},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2019ApJ...881...80L},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+@ARTICLE{schaan20,
+       author = {{Schaan}, Emmanuel and {Ferraro}, Simone and {Seljak}, Uros},
+        title = "{Photo-z outlier self-calibration in weak lensing surveys}",
+      journal = {\jcap},
+     keywords = {Astrophysics - Cosmology and Nongalactic Astrophysics},
+         year = 2020,
+        month = dec,
+       volume = {2020},
+       number = {12},
+          eid = {001},
+        pages = {001},
+          doi = {10.1088/1475-7516/2020/12/001},
+archivePrefix = {arXiv},
+       eprint = {2007.12795},
+ primaryClass = {astro-ph.CO},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2020JCAP...12..001S},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+@ARTICLE{zhang10,
+       author = {{Zhang}, Pengjie and {Pen}, Ue-Li and {Bernstein}, Gary},
+        title = "{Self-calibration of photometric redshift scatter in weak-lensing surveys}",
+      journal = {\mnras},
+     keywords = {gravitational lensing, cosmology: observations, cosmology: theory, large-scale structure of Universe, Astrophysics - Cosmology and Nongalactic Astrophysics},
+         year = 2010,
+        month = jun,
+       volume = {405},
+       number = {1},
+        pages = {359-374},
+          doi = {10.1111/j.1365-2966.2010.16445.x},
+archivePrefix = {arXiv},
+       eprint = {0910.4181},
+ primaryClass = {astro-ph.CO},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2010MNRAS.405..359Z},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+@book{bishop,
+  title={Pattern Recognition and Machine Learning},
+  author={Bishop, C.M.},
+  isbn={9781493938438},
+  lccn={2006922522},
+  series={Information Science and Statistics},
+  url={https://books.google.co.uk/books?id=kOXDtAEACAAJ},
+  year={2016},
+  publisher={Springer New York}
+}
+@article{vanErp20,
+title = {Shrinkage priors for Bayesian penalized regression},
+journal = {Journal of Mathematical Psychology},
+volume = {89},
+pages = {31-50},
+year = {2019},
+issn = {0022-2496},
+doi = {https://doi.org/10.1016/j.jmp.2018.12.004},
+url = {https://www.sciencedirect.com/science/article/pii/S0022249618300567},
+author = {Sara {van Erp} and Daniel L. Oberski and Joris Mulder},
+keywords = {Bayesian, Shrinkage priors, Penalization, Empirical Bayes, Regression},
+}
+@ARTICLE{handley19,
+       author = {{Handley}, Will and {Lemos}, Pablo},
+        title = "{Quantifying dimensionality: Bayesian cosmological model complexities}",
+      journal = {\prd},
+     keywords = {Astrophysics - Cosmology and Nongalactic Astrophysics, Astrophysics - Instrumentation and Methods for Astrophysics},
+         year = 2019,
+        month = jul,
+       volume = {100},
+       number = {2},
+          eid = {023512},
+        pages = {023512},
+          doi = {10.1103/PhysRevD.100.023512},
+archivePrefix = {arXiv},
+       eprint = {1903.06682},
+ primaryClass = {astro-ph.CO},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2019PhRvD.100b3512H},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+@ARTICLE{raveri19,
+       author = {{Raveri}, Marco and {Hu}, Wayne},
+        title = "{Concordance and discordance in cosmology}",
+      journal = {\prd},
+     keywords = {Astrophysics - Cosmology and Nongalactic Astrophysics},
+         year = 2019,
+        month = feb,
+       volume = {99},
+       number = {4},
+          eid = {043506},
+        pages = {043506},
+          doi = {10.1103/PhysRevD.99.043506},
+archivePrefix = {arXiv},
+       eprint = {1806.04649},
+ primaryClass = {astro-ph.CO},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2019PhRvD..99d3506R},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+@article{spiegelhalter02,
+author = {Spiegelhalter, David J. and Best, Nicola G. and Carlin, Bradley P. and Van Der Linde, Angelika},
+title = {Bayesian measures of model complexity and fit},
+journal = {Journal of the Royal Statistical Society: Series B (Statistical Methodology)},
+volume = {64},
+number = {4},
+pages = {583-639},
+keywords = {Bayesian model comparison, Decision theory, Deviance information criterion, Effective number of parameters, Hierarchical models, Information theory, Leverage, Markov chain Monte Carlo methods, Model dimension},
+doi = {https://doi.org/10.1111/1467-9868.00353},
+url = {https://rss.onlinelibrary.wiley.com/doi/abs/10.1111/1467-9868.00353},
+eprint = {https://rss.onlinelibrary.wiley.com/doi/pdf/10.1111/1467-9868.00353},
+abstract = {Summary. We consider the problem of comparing complex hierarchical models in which the number of parameters is not clearly defined. Using an information theoretic argument we derive a measure pD for the effective number of parameters in a model as the difference between the posterior mean of the deviance and the deviance at the posterior means of the parameters of interest. In general pD approximately corresponds to the trace of the product of Fisher's information and the posterior covariance, which in normal models is the trace of the ‘hat’ matrix projecting observations onto fitted values. Its properties in exponential families are explored. The posterior mean deviance is suggested as a Bayesian measure of fit or adequacy, and the contributions of individual observations to the fit and complexity can give rise to a diagnostic plot of deviance residuals against leverages. Adding pD to the posterior mean deviance gives a deviance information criterion for comparing models, which is related to other information criteria and has an approximate decision theoretic justification. The procedure is illustrated in some examples, and comparisons are drawn with alternative Bayesian and classical proposals. Throughout it is emphasized that the quantities required are trivial to compute in a Markov chain Monte Carlo analysis.},
+year = {2002}
+}
+
+
+
+
+
+
+
+
+
 
 
 
